config.json: updated domain

--- a/data/config.json
+++ b/data/config.json
@@ -27,5 +27,6 @@
             "url": "/faq",
             "style": "link"
         }
-    ]
+    ],
+    "domain": "https://diligent-hedgehog-752f4.netlify.app"
 }
